# LearnFFmpeg

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/glm/: CMakeLists.txt
app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  HWCodecPlayer.cpp  HWCodecPlayer.h  MediaPlayer.h  PlayerWrapper.cpp
app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.h  VideoDecoder.cpp
app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VideoRender.h
app/src/main/cpp/recorder/: GLCameraRender.cpp  GLCameraRender.h  MediaRecorder.cpp  MediaRecorder.h  MediaRecorderContext.cpp  MediaRecorderContext.h  SingleAudioRecorder.cpp  SingleAudioRecorder.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h
app/src/main/cpp/util/: ASanTestCase.h  GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
app/src/main/java/com/byteflow/learnffmpeg/: AVRecorderActivity.java  VideoRecorderActivity.java
zgy_doc/: FFmpeg学习计划.md  技术架构分析.md
